--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ html{
     margin: 0 auto;
 }
 
-.main{
+.app{
     width: 100%;
     height: 100vh;
     position: relative;
@@ -46,6 +46,7 @@ html{
     overflow-y: scroll;
 }
 
-.main::-webkit-scrollbar {
+.app::-webkit-scrollbar {
     display: none;
 }
+
