--- a/src/components/Inventory/Inventory.scss
+++ b/src/components/Inventory/Inventory.scss
@@ -1,46 +1,63 @@
-.title{
-    padding-top: 60px;
-}
+
 
 .inventory{
+    padding-top: 100px;
+    .title{
+        text-align: left;
+        width: 100%;
+        font-weight: 500;
+        font-size: 20px;
+        color: #aaaaaa;
+        &::after {
+            width: 100%;
+            height: 2px;
+            bottom: -15px;
+            background-color: #aaaaaa;
+        }
+    }
     .container{
         width: 70%;
     }
     &__wrapper{
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-rows: repeat(auto-fill, minmax(160px, 1fr));
+        grid-auto-rows: 160px;
         margin-top: 50px;
-        row-gap: 15px;
+        gap: 10px;
     }
     &__item{
-        width: 19%;
-        height: 180px;
-        border-radius: 5px;
+        background: #00000063;
+        transition: 1s all;
         display: flex;
         align-items: center;
         flex-direction: column;
-        background: #ffffff1a;
+        border-radius: 5px;
         position: relative;
-        cursor: pointer;
-        transition: 0.2s all;
-        &:hover{
-            background: #ffffff3d;
-        }
+        padding: 10px 0;
+        width: 100%;
+       height: 100%;
         &_image{
-            margin-top: 10px;
+            width: 60%;
         }
         &_title{
+            font-size: 16px;
             color: #fff;
+            font-weight: 600;
+            margin-top: 10px;
+            text-align: center;
         }
-        &_line{
+        &_skinName{
+            font-size: 14px;
+            color: #c2c2c2;
+        }
+        &_rarity{
             position: absolute;
-            bottom: 0px;
-            left: 0px;
+            bottom: 0;
+            left: 0;
             height: 5px;
-            background-color: rgb(233, 23, 23);
             width: 100%;
-            border-radius: 0px 0px 5px 5px;
+            border-radius:  0 0 5px 5px;
         }
     }
 
