--- a/src/components/OpenCase/OpenCase.scss
+++ b/src/components/OpenCase/OpenCase.scss
@@ -1,20 +1,19 @@
 .opening{
     height: auto;
     padding: 150px 0 50px 0;
-    &__wrapper{
+    .title{
+        text-align: left;
         width: 100%;
-        overflow: hidden;
+        font-weight: 500;
+        font-size: 20px;
+        color: #aaaaaa;
+        &::after {
+            width: 100%;
+            height: 2px;
+            bottom: -15px;
+            background-color: #aaaaaa;
+        }
     }
-
-    &__carousel{
-        display: flex;
-        column-gap: 15px;
-        animation: animate-open 3s;
-        max-width: 100%;
-        transform: translateX(-300%);   
-        white-space: nowrap;
-    }
-
     &__previuw{
         width: 100%;
         display: flex;
@@ -35,11 +34,12 @@
             margin-top: 10px;
         }
     }
-    &__weapons{
+
+    .weapons{
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-        grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));
-        grid-auto-rows: 150px;
+        grid-template-rows: repeat(auto-fill, minmax(140px, 1fr));
+        grid-auto-rows: 140px;
         margin-top: 50px;
         gap: 10px;
         &_item{
@@ -74,14 +74,6 @@
             }
         }
     }
+    
 }
 
-@keyframes animate-open {
-    0% {
-        transform: translate(200%, 0);
-    }
-  
-    100%{
-        transform: translate(-300%, 0); 
-    }
-}
